--- a/packages/edit-post/src/components/manage-blocks-modal/style.scss
+++ b/packages/edit-post/src/components/manage-blocks-modal/style.scss
@@ -66,6 +66,8 @@
 	padding: $panel-padding 0;
 	background-color: $white;
 	z-index: z-index(".edit-post-manage-blocks-modal__category-title");
+	display: flex;
+	justify-content: space-between;
 
 	.components-base-control__field {
 		margin-bottom: 0;
@@ -74,10 +76,6 @@
 	.components-checkbox-control__label {
 		font-size: 0.9rem;
 		font-weight: 600;
-	}
-
-	> a {
-		float: right; //Aligning link to the right of category heading.
 	}
 }
 
