--- a/packages/components/src/custom-gradient-picker/style.scss
+++ b/packages/components/src/custom-gradient-picker/style.scss
@@ -1,10 +1,10 @@
 $components-custom-gradient-picker__padding: 3px; // 24px container, 18px handles inside, that leaves 6px padding, half of which is 3.
 
-.components-custom-gradient-picker:not(.has-gradient) {
+.components-custom-gradient-picker__gradient-bar:not(.has-gradient) {
 	opacity: 0.4;
 }
 
-.components-custom-gradient-picker {
+.components-custom-gradient-picker__gradient-bar {
 	width: 100%;
 	height: $icon-button-size-small;
 	border-radius: $icon-button-size-small;
@@ -54,4 +54,32 @@ $components-custom-gradient-picker__padding: 3px; // 24px container, 18px handle
 
 .components-custom-gradient-picker__inserter {
 	width: 100%;
+}
+
+.components-custom-gradient-picker__liner-gradient-indicator {
+	display: inline-block;
+	flex: 0 auto;
+	width: 20px;
+	height: 20px;
+}
+
+.components-custom-gradient-picker__ui-line {
+	display: flex;
+	justify-content: space-between;
+}
+
+.components-custom-gradient-picker .components-custom-gradient-picker__ui-line {
+	.components-base-control.components-custom-gradient-picker__angle-picker,
+	.components-base-control.components-custom-gradient-picker__type-picker {
+		margin-bottom: 0;
+	}
+}
+
+.components-custom-gradient-picker__angle-picker-field {
+	display: block;
+	width: 100%;
+}
+
+.components-custom-gradient-picker__angle-picker {
+	width: 50%;
 }
