colors: move navigation scss var to base-styles

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -160,6 +160,18 @@
 		}
 	}
 
+	// Top-level sub-menu indicators.
+	& .has-sub-menu > a {
+
+		&::after {
+			content: "\00a0\25BC";
+			display: inline-block;
+			font-size: 0.6rem;
+			height: inherit;
+			width: inherit;
+		}
+	}
+
 	&.items-justified-left > ul {
 		justify-content: flex-start;
 	}
@@ -172,18 +184,7 @@
 		justify-content: flex-end;
 	}
 
-	// Colors.
-	$light-style-sub-menu-background-color: #fff;
-	$light-style-sub-menu-border-color: #e2e4e7;
-	$light-style-sub-menu-text-color: #111;
-	$light-style-sub-menu-text-color-hover: #333;
-
-	$dark-style-sub-menu-background-color: #333;
-	$dark-style-sub-menu-border-color: #111;
-	$dark-style-sub-menu-text-color: #fff;
-	$dark-style-sub-menu-text-color-hover: #eee;
-
-	// Default Style / Ligth style.
+	// Default Style / Light styles.
 	& > ul > li > ul,
 	&.is-light-style > ul > li > ul {
 		background-color: $light-style-sub-menu-background-color;
@@ -210,7 +211,7 @@
 		}
 	}
 
-	// Dark Style.
+	// Dark Styles.
 	&.is-style-dark > ul > li > ul {
 		background-color: $dark-style-sub-menu-background-color;
 		border-color: $dark-style-sub-menu-border-color;
