Minor wip style update to be closer to design

--- a/packages/block-library/src/navigation-link/editor.scss
+++ b/packages/block-library/src/navigation-link/editor.scss
@@ -40,6 +40,7 @@
 
 	&.has-link .wp-block-navigation-link__label {
 		text-decoration: underline;
+		white-space: nowrap !important; // TODO: solve differently to prevent use of !important
 	}
 
 	.wp-block-navigation-link__submenu-icon {
