--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -69,12 +69,6 @@
 
 		// Sub-menus Flyout
 		& > li > ul {
-			-webkit-box-shadow: 0 3px 30px rgba(25, 30, 35, 0.1);
-			-moz-box-shadow: 0 3px 30px rgba(25, 30, 35, 0.1);
-			border-radius: 3px;
-			box-shadow: 0 3px 30px rgba(25, 30, 35, 0.1);
-			border-width: 1px;
-			border-style: solid;
 			margin: 0;
 			padding: 0 30px 0 10px;
 			position: absolute;
@@ -102,33 +96,6 @@
 				}
 			}
 
-			// Sub menu arrow.
-			$light-style-sub-menu-arrow-width: 20px;
-			&::after,
-			&::before {
-				bottom: 100%;
-				left: 22px;
-				border: solid transparent;
-				content: " ";
-				height: 0;
-				width: 0;
-				position: absolute;
-				pointer-events: none;
-			}
-
-			// Sub menu arrow. Background.
-			&::after {
-				border-width: $light-style-sub-menu-arrow-width / 2;
-				margin-left: -($light-style-sub-menu-arrow-width / 2);
-				bottom: calc(100% - 1px);
-			}
-
-			// Sub menu arrow. Border.
-			&::before {
-				border-width: $light-style-sub-menu-arrow-width / 2 + 1px;
-				margin-left: -($light-style-sub-menu-arrow-width / 2 + 1px);
-			}
-
 			ul {
 				width: 100%;
 			}
@@ -141,35 +108,10 @@
 		padding: 16px;
 	}
 
-	// Sub-menu depth indicators
+	// Sub-menu
 	ul ul {
 		list-style: none;
 		margin-left: 0;
-
-		li a {
-			padding-top: 8px;
-			padding-bottom: 8px;
-
-			&:first-child {
-				padding-top: 13px;
-			}
-
-			&:last-child {
-				padding-bottom: 13px;
-			}
-		}
-	}
-
-	// Top-level sub-menu indicators.
-	& .has-sub-menu > a {
-
-		&::after {
-			content: "\00a0\25BC";
-			display: inline-block;
-			font-size: 0.6rem;
-			height: inherit;
-			width: inherit;
-		}
 	}
 
 	&.items-justified-left > ul {
