navigation-link: remove CSS arrow in favor of SVG

--- a/packages/block-library/src/navigation-link/editor.scss
+++ b/packages/block-library/src/navigation-link/editor.scss
@@ -43,35 +43,35 @@
 		margin-left: 4px;
 	}
 
-	// Arrow indicator to show presence of children.
-	&.has-child {
-		position: relative;
-		padding-right: 15px;
-
-		&::after {
-			content: "";
-			position: absolute;
-			right: 0;
-			top: 50%;
-			border-left: 4px solid transparent;
-			border-right: 4px solid transparent;
-
-			border-top-width: 6px;
-			border-top-style: solid;
-			border-top-color: inherit;
-		}
-	}
-
-	.wp-block-navigation-link.has-child::after {
-		top: calc(50% - 3px);
-		border-right: 0;
-		border-top: 4px solid transparent;
-		border-bottom: 4px solid transparent;
-
-		border-left-width: 6px;
-		border-left-style: solid;
-		border-left-color: inherit;
-	}
+	//// Arrow indicator to show presence of children.
+	//&.has-child {
+	//	position: relative;
+	//	padding-right: 15px;
+	//
+	//	&::after {
+	//		content: "";
+	//		position: absolute;
+	//		right: 0;
+	//		top: 50%;
+	//		border-left: 4px solid transparent;
+	//		border-right: 4px solid transparent;
+	//
+	//		border-top-width: 6px;
+	//		border-top-style: solid;
+	//		border-top-color: inherit;
+	//	}
+	//}
+	//
+	//.wp-block-navigation-link.has-child::after {
+	//	top: calc(50% - 3px);
+	//	border-right: 0;
+	//	border-top: 4px solid transparent;
+	//	border-bottom: 4px solid transparent;
+	//
+	//	border-left-width: 6px;
+	//	border-left-style: solid;
+	//	border-left-color: inherit;
+	//}
 
 	.block-editor-rich-text__editable.is-selected:not(.keep-placeholder-on-focus):not(:focus) [data-rich-text-placeholder]::after {
 		display: inline-block;
