--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -126,6 +126,11 @@
 		justify-content: flex-end;
 	}
 
+	// reset rotation of submenu indicator icons on nested levels
+	.wp-block-navigation-link .wp-block-navigation-link svg {
+		transform: rotate(0);
+	}
+
 	// Default Style / Light styles.
 	& > ul > li > ul,
 	&.is-light-style > ul > li > ul {
