--- a/packages/block-library/src/navigation-link/editor.scss
+++ b/packages/block-library/src/navigation-link/editor.scss
@@ -32,11 +32,11 @@
 	.wp-block-navigation-link__content {
 		display: flex;
 		align-items: center;
+		width: max-content;
 	}
 
 	&.has-link .wp-block-navigation-link__label {
 		text-decoration: underline;
-		white-space: nowrap !important; // TODO: solve differently to prevent use of !important
 	}
 
 	.wp-block-navigation-link__submenu-icon {
