--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -1,3 +1,5 @@
+$navigation-height: 60px;
+
 /*
 * Frontend: reset the default list styles
 */
@@ -66,13 +68,19 @@
 /*
 * Shared styles between editor and frontend
 */
+.wp-block-navigation,
+.wp-block-navigation .block-editor-block-list__layout {
+	display: flex;
+	flex-wrap: wrap;
+}
 
 .wp-block-navigation {
 
-	// reset rotation of submenu indicator icons on nested levels
-	.wp-block-navigation-link .wp-block-navigation-link svg {
-		transform: rotate(0);
-	}
+	// Vertical alignment
+	min-height: $navigation-height;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	align-items: center;
 }
 
 
