--- a/packages/block-library/src/navigation-link/editor.scss
+++ b/packages/block-library/src/navigation-link/editor.scss
@@ -41,6 +41,10 @@
 
 	.wp-block-navigation-link__submenu-icon {
 		margin-left: 4px;
+
+		svg {
+			fill: currentColor;
+		}
 	}
 
 	.block-editor-rich-text__editable.is-selected:not(.keep-placeholder-on-focus):not(:focus) [data-rich-text-placeholder]::after {
