--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -91,6 +91,10 @@ $navigation-height: 60px;
 		margin-right: $grid-size;
 		padding: 0 $grid-size;
 
+		> .block-editor-inner-blocks {
+			display: none;
+		}
+
 		&.has-child > .wp-block-navigation__container,
 		&.is-editing.has-child > .block-editor-inner-blocks {
 			// Box model
@@ -148,6 +152,60 @@ $navigation-height: 60px;
 	}
 }
 
+// Styles
+.wp-block-navigation {
+
+	// Default / Light styles - No text color
+	.wp-block-navigation-link,
+	&.is-style-light .wp-block-navigation-link {
+		//  No text color
+		&:not(.has-text-color) > .block-editor-inner-blocks,
+		&:not(.has-text-color) > .wp-block-navigation__container {
+			color: $light-style-sub-menu-background-color;
+			border-color: $light-style-sub-menu-border-color;
+		}
+
+		// No background color
+		&:not(.has-background-color) > .block-editor-inner-blocks,
+		&:not(.has-background-color) > .wp-block-navigation__container {
+			background-color: $light-style-sub-menu-background-color;
+
+			.wp-block-navigation-link__submenu-icon,
+			.wp-block-navigation-link__content {
+				color: $light-style-sub-menu-text-color;
+			}
+
+			.wp-block-navigation-link__content:hover {
+				color: $light-style-sub-menu-text-color-hover;
+			}
+		}
+	}
+
+	// Dark styles.
+	&.is-style-dark .wp-block-navigation-link {
+		// No text color
+		&:not(.has-text-color) > .block-editor-inner-blocks,
+		&:not(.has-text-color) > .wp-block-navigation__container {
+			color: $dark-style-sub-menu-background-color;
+			border-color: $dark-style-sub-menu-border-color;
+		}
+
+		// No background color
+		&:not(.has-background-color) > .block-editor-inner-blocks,
+		&:not(.has-background-color) > .wp-block-navigation__container {
+			background-color: $dark-style-sub-menu-background-color;
+
+			.wp-block-navigation-link__submenu-icon,
+			.wp-block-navigation-link__content {
+				color: $dark-style-sub-menu-text-color;
+			}
+
+			.wp-block-navigation-link__content:hover {
+				color: $dark-style-sub-menu-text-color-hover;
+			}
+		}
+	}
+}
 
 /*
 * Frontend: non-shared styles & overrides
@@ -203,34 +261,5 @@ $navigation-height: 60px;
 
 	&.items-justified-right > ul {
 		justify-content: flex-end;
-	}
-
-	// Default Style / Light styles.
-	& > ul > li > ul,
-	&.is-light-style > ul > li > ul {
-		background-color: $light-style-sub-menu-background-color;
-		border-color: $light-style-sub-menu-border-color;
-
-		a {
-			color: $light-style-sub-menu-text-color;
-
-			&:hover {
-				color: $light-style-sub-menu-text-color-hover;
-			}
-		}
-	}
-
-	// Dark Styles.
-	&.is-style-dark > ul > li > ul {
-		background-color: $dark-style-sub-menu-background-color;
-		border-color: $dark-style-sub-menu-border-color;
-
-		a {
-			color: $dark-style-sub-menu-text-color;
-
-			&:hover {
-				color: $dark-style-sub-menu-text-color-hover;
-			}
-		}
 	}
 }
