--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -147,7 +147,7 @@ $navigation-min-height: 60px;
 		.wp-block-navigation__container {
 			background-color: inherit;
 			color: inherit;
-			border-color: inherit;
+			border-color: currentColor;
 		}
 
 		.wp-block-navigation-link__content {
