--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -33,7 +33,8 @@
 .block-editor-inserter__popover > .components-popover__content {
 	@include break-medium {
 		overflow-y: visible;
-		height: 92vh; // This is further limited by a max-height from the popover component itself.
+		width: 86vw; // This is limited by a max-width.
+		height: 92vh; // This is limited by a max-height from the popover component itself.
 	}
 
 	// Remove the popover styling and apply it instead to each sub panel.
@@ -55,6 +56,8 @@
 
 	.components-tip {
 		padding: 0 $grid-size-large $grid-size-large $grid-size-large;
+		display: flex;
+		align-items: center;
 	}
 }
 
@@ -64,8 +67,8 @@
 	box-shadow: $shadow-popover;
 	border: $border-width solid $light-gray-500;
 	background: $white;
-
-	width: 480px;
+	width: 100%;
+	max-width: 480px;
 }
 
 // Container for just the block library.
@@ -167,13 +170,27 @@
 
 // Container for the preview.
 .block-editor-inserter__preview-panel {
+	position: relative;
 	height: 480px;
 	padding: $grid-size-large;
 	@include edit-post__fade-in-animation();
 
 	.block-editor-block-card {
+		min-height: 6em;
 		padding-bottom: $grid-size-large;
-		margin-bottom: $grid-size;
+		margin-bottom: $grid-size-large;
 		border-bottom: $border-width solid $light-gray-500;
+	}
+
+	// Create a white overlay at the bottom of the preview to soft-crop the preview.
+	&::after {
+		content: "";
+		display: block;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		height: $grid-size-large;
+		background: $white;
 	}
 }
