Fix tip padding.

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -59,7 +59,7 @@
 	}
 
 	.components-tip {
-		padding: 0 $grid-size-large $grid-size-large $grid-size-large;
+		padding: $grid-size-large;
 		display: flex;
 		align-items: center;
 	}
